# MaQIP

./: CITATION.cff  README.md  pyproject.toml  requirements.txt  setup.cfg
examples/: brisbanne_run.py  fez_run.py  genetic_run_analysis_statevector.ipynb  statevector_run.py  torino_run.py
src/maqip/: genetic.py  genetic_brisbanne.py  genetic_statevector.py
src/maqip.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
